tests/baselines/reference/classExpression1.errors.txt
tests/cases/conformance/classes/classExpressions/classExpression1.ts(1,15): error TS9003: 'class' expressions are not currently supported.


==== tests/cases/conformance/classes/classExpressions/classExpression1.ts (1 errors) ====
    var v = class C {};
                  ~
!!! error TS9003: 'class' expressions are not currently supported.